[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/2d/colored-transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Skeleton.gd" type="Script" id=2]
[ext_resource path="res://resources/atlas_1bit/Skeleton.atlastex" type="Texture" id=3]
[ext_resource path="res://assets/audio/lose2.ogg" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 368, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 288, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 304, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 320, 144, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[sub_resource type="CircleShape2D" id=7]
radius = 48.0

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite2" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 6 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="SatietyTimer" type="Timer" parent="."]
autostart = true

[node name="EnergyTimer" type="Timer" parent="."]
autostart = true

[node name="AgeTimer" type="Timer" parent="."]
autostart = true

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 666.0

[node name="BoredomTimer" type="Timer" parent="."]
autostart = true

[node name="PostDeathTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="--" type="Timer" parent="."]
wait_time = 60.0

[node name="StatID" type="Label" parent="." groups=["stat"]]
unique_name_in_owner = true
margin_left = -8.0
margin_top = 8.0
margin_right = 12.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 8
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 0
text = "1234"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -8.0
margin_top = -30.0
margin_right = 24.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="StatAge" type="Label" parent="VBoxContainer" groups=["stat"]]
unique_name_in_owner = true
margin_left = 2.0
margin_right = 32.0
margin_bottom = 12.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 0
text = "AGE"
align = 2

[node name="StatSatiety" type="Label" parent="VBoxContainer" groups=["stat"]]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 12.0
margin_right = 32.0
margin_bottom = 24.0
size_flags_horizontal = 8
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 0
text = "SAT"
align = 2

[node name="StatEnergy" type="Label" parent="VBoxContainer" groups=["stat"]]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 24.0
margin_right = 32.0
margin_bottom = 36.0
size_flags_horizontal = 8
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 0
text = "NRG"
align = 2

[node name="StatBoredom" type="Label" parent="VBoxContainer" groups=["stat"]]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 36.0
margin_right = 32.0
margin_bottom = 48.0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 0
text = "BOR"
align = 2

[node name="sfxHelloWorld" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="sfxDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Local" type="Position2D" parent="."]

[node name="Target" type="Position2D" parent="."]

[node name="AreaCircle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCircle"]
shape = SubResource( 7 )

[connection signal="timeout" from="SatietyTimer" to="." method="_on_SatietyTimer_timeout"]
[connection signal="timeout" from="EnergyTimer" to="." method="_on_EnergyTimer_timeout"]
[connection signal="timeout" from="AgeTimer" to="." method="_on_AgeTimer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="timeout" from="BoredomTimer" to="." method="_on_BoredomTimer_timeout"]
[connection signal="timeout" from="PostDeathTimer" to="." method="_on_PostDeathTimer_timeout"]
